@@ -11,7 +11,8 @@
 * Added APIs for PanelIconGrid to draw focus on drop.
 * Converted launch button into widget class for more easy management.
 * Adjusted PanelIconGrid: min spacing is now 1, no_window flag is now left
-    unset by default.
+    unset by default, spacing is taken into account on overall size to be
+    consistent on chosen orientation.
 * Implemented dropping file or folder onto launch bar to create launcher.
 
 0.8.2
